public abstract class Rachunek {
    public double kwota;
}
