@startuml

class Klient {
    czyMaKarteStalegoKlienta
    idKarty
    kwotaDoZaplaty

    Klient()
    Klient(czyMaKarteStalegoKlienta, idKarty, kwotaDoZaplaty)

    getCzyMaKarteStalegoKlienta()
    getIdKarty()
    getKwotaDoZaplaty()
    setCzyMaKarteStalegoKlienta(flaga)
    setIdKarty(idKarty)
    setKwotaDoZaplaty(kwotaDoZaplaty)
}

abstract class DystrybutorPaliwa {
    kursPaliwa
    kwotaDoZaplaty
    iloscPaliwaDoZatankowania
    klient
    platnosc

    tankuj(iloscPaliwa)
}

class DystrybutorBenzyny {
    DystrybutorBenzyny()
    DystrybutorBenzyny(kursPaliwa)
    
    tankuj(iloscPaliwa)

    getKursPaliwa()
    getKwotaDoZaplaty()
    getIloscPaliwaDoZatankowania()
    setKursPaliwa(kursPaliwa)
    setKwotaDoZaplaty(kwotaDoZaplaty)
    setIloscPaliwaDoZatankowiania(iloscPaliwaDoZatankowania)
}

class DystrybutorDiesla {
    DystrybutorDiesla()
    DystrybutorDiesla(kursPaliwa)
    
    tankuj(iloscPaliwa)

    getKursPaliwa()
    getKwotaDoZaplaty()
    getIloscPaliwaDoZatankowania()
    setKursPaliwa(kursPaliwa)
    setKwotaDoZaplaty(kwotaDoZaplaty)
    setIloscPaliwaDoZatankowiania(iloscPaliwaDoZatankowania)
}

class DystrybutorLPG {
    DystrybutorLPG()
    DystrybutorLPG(kursPaliwa)
    
    tankuj(iloscPaliwa)

    getKursPaliwa()
    getKwotaDoZaplaty()
    getIloscPaliwaDoZatankowania()
    setKursPaliwa(kursPaliwa)
    setKwotaDoZaplaty(kwotaDoZaplaty)
    setIloscPaliwaDoZatankowiania(iloscPaliwaDoZatankowania)
}

class Myjnia {
    kwotaDoZaplaty
    List<String> programy
    klient
    platnosc

    Myjnia()
    Myjnia(kwotaDozaplaty, programy, klient, platnosc)

    umyj(program)

    getKwotaDoZaplaty()
    getProgramy()
    getKlient()
    getPlatnosc()
    setKwotaDoZaplaty()
    setProgramy()
    setKlient()
    setPlatnosc()
}

class Odkurzacz {
    kwotaDoZaplaty
    klient
    platnosc

    Odkurzacz()
    Odkurzacz(kwotaDoZaplaty, klient, platnosc)


    odkurz(kwotaDoZaplaty)

    getKwotaDoZaplaty()
    getKlient()
    getPlatnosc()
    setKwotaDoZaplaty()
    setKlient()
    setPlatnosc()
}

abstract class Platnosc {
    klient
    kasjer
    kwotaDoZaplaty
    rachunek

    zaplac(kwotaDoZaplaty)

    getKwotaDoZaplaty()
    getRachunek()
    getKlient()
    getKasjer()
    setKwotaDoZaplaty(kwotaDoZaplaty)
    setRachunek(rachunek)
    setKlient()
    setKasjer()
}

class Gotowka {
    Gotowka()
    Gotowka(klient, kasjer, kwotaDoZaplaty, rodzajPlatnosci, rodzajRachunku)

    zaplac(kwotaDoZaplaty)
} 

class Rzeton {
    Rzeton()
    Rzeton(klient, kasjer, kwotaDoZaplaty, rodzajPlatnosci, rodzajRachunku)

    zaplac(kwotaDoZaplaty)
} 

class Karta {
    autoryzacja

    Karta()
    Karta(klient, kasjer, kwotaDoZaplaty, rodzajPlatnosci, rodzajRachunku)

    zaplac(kwotaDoZaplaty)
}

class Autoryzacja {
    potwierdzenie
    bank

    Autoryzacja()
    Autoryzacja(potwierdzenie, bank)

    autoryzuj()

    getPotwierdzenie()
    getBank()
    setPotwierdzenie()
    setBank()
}

class Potwierdzenie {
    czyPotwierdzono

    Potwierdzenie()
    Potwierdzenie(czyPotwierdzono)

    wydrukujPotwierdzenie()

    getCzyPotwierdzono()
    setCzyPotwierdzono()
}

abstract class Rachunek {
    kwota

    Rachunek()
}

class Paragon {
    Paragon()
    Paragon(kwota)

    wydrukujParagon(kwota)

    getKwota()
    setKwota()
}

class Faktura {
    Faktura()
    Faktura(kwota)

    wydrukujFakture(kwota)

    getKwota()
    setKwota()
}

class Kasjer {
    id

    Kasjer()
    Kasjer(id)

    przyjmijPlatnosc()

    getId()
    setId(id)
}

class Bank {
    nazwa

    Bank()
    Bank(nazwa)

    potwierdzPłatnosc()

    getNazwa()
    setNazwa(nazwa)
}

Klient --* DystrybutorPaliwa
Klient --* Myjnia
Klient --* Odkurzacz

DystrybutorPaliwa <|-- DystrybutorBenzyny
DystrybutorPaliwa <|-- DystrybutorDiesla
DystrybutorPaliwa <|-- DystrybutorLPG

DystrybutorPaliwa *-- Platnosc
Myjnia *-- Platnosc
Odkurzacz *-- Platnosc

Platnosc *-- Kasjer

Platnosc <|-- Karta
Platnosc <|-- Gotowka
Platnosc <|-- Rzeton
Platnosc *-- Rachunek

Rachunek <|-- Paragon
Rachunek <|-- Faktura

Karta *-- Autoryzacja
Autoryzacja *-- Potwierdzenie

Autoryzacja *-- Bank

@enduml